syntax = "proto3";

package iop;
option go_package = ".;iop";

message SendDealRequest {
  Deal deal = 1;
}

message SendDealResponse {
}

message ValidateRequest {
  enum Type {
    unknown = 0;
    block = 1;
    transaction = 2;
  }
  Type type = 1;
  bytes hash = 2;
}

message Deal {
  uint32 index = 1;
  EncryptedDeal deal = 2;
  bytes signature = 3;
}

message EncryptedDeal {
  bytes dhKey = 1;
  bytes signature = 2;
  bytes nonce = 3;
  bytes cipher = 4;
}

message ValidateResponse {
  bytes hash = 1;
  bool valid = 2;
  int64 blockNumber = 3;
  bytes signature = 4;
}

// ====== 新增：有序签名请求结构体 ======
message SequentialSignRequest {
  bytes message = 1;  // 待签名的消息 (hash + result + type)
  bytes prev_s = 2;   // 上一个签名的 S 部分
  bytes prev_r = 3;   // 上一个签名的 R 部分
  bool is_first = 4;  // 是否是第一个签名者
}

// ====== 新增：有序签名响应结构体 ======
message SequentialSignResponse {
  bytes s = 1;        // 当前签名的 S 部分
  bytes r = 2;        // 当前签名的 R 部分
}

service OracleNode {
  rpc SendDeal(SendDealRequest) returns (SendDealResponse);
  rpc Validate(ValidateRequest) returns (ValidateResponse);
  
  // ====== 新增：有序签名 RPC 接口 ======
  rpc SequentialSign(SequentialSignRequest) returns (SequentialSignResponse);
}
