package iop

import (
	"context"
	"crypto/ecdsa"
	"crypto/rand"
	"crypto/sha256"
	"encoding/hex"
	"fmt" // ÂøÖÈ°ªÂºïÂÖ• fmt
	"math/big"
	"net"
	// "strings" // Â∑≤ÁßªÈô§Êú™‰ΩøÁî®ÂåÖ
	"time"

	mqtt "github.com/eclipse/paho.mqtt.golang"
	"github.com/ethereum/go-ethereum/accounts/abi"
	"github.com/ethereum/go-ethereum/accounts/abi/bind"
	"github.com/ethereum/go-ethereum/common"
	"github.com/ethereum/go-ethereum/crypto"
	"github.com/ethereum/go-ethereum/ethclient"
	iota "github.com/iotaledger/iota.go/v2"
	log "github.com/sirupsen/logrus"
	"go.dedis.ch/kyber/v3"
	"go.dedis.ch/kyber/v3/pairing"
	"go.dedis.ch/kyber/v3/util/random"
	"google.golang.org/grpc"

	"ioporaclenode/internal/pkg/kyber/pairing/bn256"
)

// ===========================
// G2 Âü∫ÁÇπÂ∏∏Èáè
// ===========================
var (
	g2_X_IM, _ = new(big.Int).SetString("1800deef121f1e76426a00665e5c4479674322d4f75edadd46debd5cd992f6ed", 16)
	g2_X_RE, _ = new(big.Int).SetString("198e9393920d483a7260bfb731fb5d25f1aa493335a9e71297e485b7aef312c2", 16)
	g2_Y_IM, _ = new(big.Int).SetString("12c85ea5db8c6deb4aab71808dcb408fe3d1e7690c43d37b4ce6cc0166fa7daa", 16)
	g2_Y_RE, _ = new(big.Int).SetString("090689d0585ff075ec9e99ad690c3395bc4b313370b38ef355acdadcd122975b", 16)
)

var kyberG2MarshalIsIMRE bool
var chainPubKeyIsIMRE bool

// ===========================
// BN254/alt_bn128 Â∏∏Èáè
// ===========================
var (
	bn254PP, _      = new(big.Int).SetString("30644e72e131a029b85045b68181585d97816a916871ca8d3c208c16d87cfd47", 16)
	bn254SqrtExp, _ = new(big.Int).SetString("0c19139cb84c680a6e14116da060561765e05aa45a1c72a34f082305b61f3f52", 16)
	bn254B          = big.NewInt(3)
)

const debugIBOSHashToPoint = true

type OracleNode struct {
	UnsafeOracleNodeServer
	server            *grpc.Server
	serverLis         net.Listener
	targetEthClient   *ethclient.Client
	sourceEthClient   *ethclient.Client
	registryContract  *RegistryContractWrapper
	oracleContract    *OracleContract
	distKeyContract   *DistKeyContract
	suite             pairing.Suite
	ecdsaPrivateKey   *ecdsa.PrivateKey
	blsPrivateKey     kyber.Scalar
	account           common.Address
	dkg               *DistKeyGenerator
	connectionManager *ConnectionManager
	validator         *Validator
	aggregator        *Aggregator
	chainId           *big.Int

	ibosPrivKeyG1 kyber.Point
	ibosID        []byte
}

// ===========================
// Â∞èÂ∑•ÂÖ∑
// ===========================
func hex32(b []byte) string { return "0x" + hex.EncodeToString(b) }

func hexU256(x *big.Int) string {
	if x == nil {
		return "<nil>"
	}
	return "0x" + hex.EncodeToString(common.LeftPadBytes(x.Bytes(), 32))
}

func split128To4(rb []byte) ([4]*big.Int, error) {
	var out [4]*big.Int
	if len(rb) != 128 {
		return out, fmt.Errorf("expected 128 bytes, got %d", len(rb))
	}
	out[0] = new(big.Int).SetBytes(rb[0:32])
	out[1] = new(big.Int).SetBytes(rb[32:64])
	out[2] = new(big.Int).SetBytes(rb[64:96])
	out[3] = new(big.Int).SetBytes(rb[96:128])
	return out, nil
}

func swapIMRE(v [4]*big.Int) [4]*big.Int {
	return [4]*big.Int{v[1], v[0], v[3], v[2]}
}

func eq4(a, b [4]*big.Int) bool {
	for i := 0; i < 4; i++ {
		if a[i] == nil || b[i] == nil {
			return false
		}
		if a[i].Cmp(b[i]) != 0 {
			return false
		}
	}
	return true
}

// ===========================
// ÂàùÂßãÂåñÊ£ÄÊµãÂáΩÊï∞
// ===========================
func printG2GeneratorFront64(suite pairing.Suite) error {
	one := suite.G2().Scalar().SetInt64(1)
	g2 := suite.G2().Point().Mul(one, nil)
	rb, err := g2.MarshalBinary()
	if err != nil {
		return fmt.Errorf("MarshalBinary(G2 base) failed: %w", err)
	}
	if len(rb) != 128 {
		return fmt.Errorf("unexpected G2 marshal len=%d", len(rb))
	}

	a0 := new(big.Int).SetBytes(rb[0:32])
	a1 := new(big.Int).SetBytes(rb[32:64])

	log.Infof("G2 generator front64 bytes:")
	log.Infof("  rb[0:32] = %s", hex32(rb[0:32]))
	log.Infof("  rb[32:64]= %s", hex32(rb[32:64]))
	log.Infof("Ref constants: X_IM=0x1800..., X_RE=0x198e...")

	if a0.Cmp(g2_X_IM) == 0 && a1.Cmp(g2_X_RE) == 0 {
		log.Infof("‚úÖ Kyber MarshalBinary starts with [X_IM, X_RE] => IM,RE order.")
		return nil
	}
	if a0.Cmp(g2_X_RE) == 0 && a1.Cmp(g2_X_IM) == 0 {
		log.Warnf("‚úÖ Kyber MarshalBinary starts with [X_RE, X_IM] => RE,IM order.")
		return nil
	}

	log.Warnf("‚ö†Ô∏è Generator first 64 bytes don't match either known ordering. Possibly different suite/encoding.")
	return nil
}

func detectKyberG2MarshalOrderIsIMRE(suite pairing.Suite) (bool, error) {
	one := suite.G2().Scalar().SetInt64(1)
	g2 := suite.G2().Point().Mul(one, nil)

	rb, err := g2.MarshalBinary()
	if err != nil {
		return false, fmt.Errorf("MarshalBinary(G2 base) failed: %w", err)
	}
	chunks, err := split128To4(rb)
	if err != nil {
		return false, err
	}

	imre := [4]*big.Int{g2_X_IM, g2_X_RE, g2_Y_IM, g2_Y_RE}
	if eq4(chunks, imre) {
		log.Infof("Kyber G2 MarshalBinary order DETECTED: [X_IM, X_RE, Y_IM, Y_RE] (IMRE)")
		return true, nil
	}
	if eq4(swapIMRE(chunks), imre) {
		log.Warnf("Kyber G2 MarshalBinary order DETECTED: [X_RE, X_IM, Y_RE, Y_IM] (REIM)")
		return false, nil
	}

	return false, fmt.Errorf("cannot detect Kyber G2 marshal order")
}

func verifyAndDetectChainPubKeyOrder(ctx context.Context, suite pairing.Suite, distKeyContract *DistKeyContract) (bool, error) {
	pk4, err := distKeyContract.GetPublicKey(&bind.CallOpts{Context: ctx})
	if err != nil {
		return false, fmt.Errorf("GetPublicKey call failed: %w", err)
	}

	var onChain [4]*big.Int
	for i := 0; i < 4; i++ {
		onChain[i] = pk4[i]
		if onChain[i] == nil {
			return false, fmt.Errorf("on-chain pubkey[%d] is nil", i)
		}
	}

	imre := [4]*big.Int{g2_X_IM, g2_X_RE, g2_Y_IM, g2_Y_RE}
	var isIMRE bool
	if eq4(onChain, imre) {
		isIMRE = true
		log.Infof("CHAIN DistKey pubkey order DETECTED: [X_IM, X_RE, Y_IM, Y_RE] (IMRE)")
	} else if eq4(swapIMRE(onChain), imre) {
		isIMRE = false
		log.Warnf("CHAIN DistKey pubkey order DETECTED: [X_RE, X_IM, Y_RE, Y_IM] (REIM)")
	} else {
		log.Warnf("‚ö†Ô∏è CHAIN pubkey does not equal generator(Priv=1) in either IMRE/REIM; still attempting Kyber parse check.")
		isIMRE = true
	}

	var kyberOrder [4]*big.Int
	if kyberG2MarshalIsIMRE {
		if isIMRE {
			kyberOrder = onChain
		} else {
			kyberOrder = swapIMRE(onChain)
		}
	} else {
		if isIMRE {
			kyberOrder = swapIMRE(onChain)
		} else {
			kyberOrder = onChain
		}
	}

	buf := make([]byte, 0, 128)
	for i := 0; i < 4; i++ {
		buf = append(buf, common.LeftPadBytes(kyberOrder[i].Bytes(), 32)...)
	}

	p := suite.G2().Point()
	if err := p.UnmarshalBinary(buf); err != nil {
		return isIMRE, fmt.Errorf("MASTER PUBKEY INVALID FOR KYBER (G2 UnmarshalBinary failed): %w", err)
	}

	log.Infof("MASTER PUBKEY OK (parsed by Kyber G2).")
	return isIMRE, nil
}

// ===========================
// ÊûÑÈÄ†ËäÇÁÇπ
// ===========================
func NewOracleNode(c Config) (*OracleNode, error) {
	server := grpc.NewServer()
	serverLis, err := net.Listen("tcp", c.BindAddress)
	if err != nil {
		return nil, fmt.Errorf("listen on %s: %v", c.BindAddress, err)
	}

	targetEthClient, err := ethclient.Dial(c.Ethereum.TargetAddress)
	if err != nil {
		return nil, fmt.Errorf("dial eth client: %v", err)
	}

	sourceEthClient, err := ethclient.Dial(c.Ethereum.SourceAddress)
	if err != nil {
		return nil, fmt.Errorf("dial eth client: %v", err)
	}

	chainId := big.NewInt(c.Ethereum.ChainID)
	iotaAPI := iota.NewNodeHTTPAPIClient(c.IOTA.Rest)
	opts := mqtt.NewClientOptions()
	opts.AddBroker(c.IOTA.Mqtt)
	opts.SetClientID(c.BindAddress)
	mqttClient := mqtt.NewClient(opts)
	mqttTopic := []byte(c.IOTA.Topic)

	registryContract, err := NewRegistryContract(common.HexToAddress(c.Contracts.RegistryContractAddress), targetEthClient)
	if err != nil {
		return nil, fmt.Errorf("registry contract: %v", err)
	}
	registryContractWrapper := &RegistryContractWrapper{RegistryContract: registryContract}

	oracleContract, err := NewOracleContract(common.HexToAddress(c.Contracts.OracleContractAddress), targetEthClient)
	if err != nil {
		return nil, fmt.Errorf("oracle contract: %v", err)
	}

	distKeyContract, err := NewDistKeyContract(common.HexToAddress(c.Contracts.DistKeyContractAddress), targetEthClient)
	if err != nil {
		return nil, fmt.Errorf("dist key contract: %v", err)
	}

	suite := bn256.NewSuiteG2()

	if err := printG2GeneratorFront64(suite); err != nil {
		return nil, err
	}
	kyberG2MarshalIsIMRE, err = detectKyberG2MarshalOrderIsIMRE(suite)
	if err != nil {
		return nil, err
	}
	chainPubKeyIsIMRE, err = verifyAndDetectChainPubKeyOrder(context.Background(), suite, distKeyContract)
	if err != nil {
		return nil, err
	}
	log.Infof("SUMMARY: KyberMarshalIsIMRE=%v, ChainPubKeyIsIMRE=%v", kyberG2MarshalIsIMRE, chainPubKeyIsIMRE)

	ecdsaPrivateKey, err := crypto.HexToECDSA(c.Ethereum.PrivateKey)
	if err != nil {
		return nil, fmt.Errorf("hex to ecdsa: %v", err)
	}

	blsPrivateKey, err := HexToScalar(suite, c.PrivateKey)
	if err != nil {
		return nil, fmt.Errorf("hex to scalar: %v", err)
	}

	hexAddress, err := AddressFromPrivateKey(ecdsaPrivateKey)
	if err != nil {
		return nil, fmt.Errorf("address from private key: %v", err)
	}
	account := common.HexToAddress(hexAddress)

	// IBOS Key (HashToPoint)
	ibosID := account.Bytes()
	Q_ID, err := solidityHashToG1(suite, ibosID)
	if err != nil {
		return nil, fmt.Errorf("failed to map ID to G1: %v", err)
	}

	// Âº∫Âà∂‰ΩøÁî®‰∏ªÁßÅÈí• "1"
	masterSecret := suite.G1().Scalar().SetInt64(1)
	ibosPrivKeyG1 := suite.G1().Point().Mul(masterSecret, Q_ID)

	log.Infof("IBOS System (Kyber BN256) initialized. ID: %s", account.Hex())

	connectionManager := NewConnectionManager(registryContractWrapper, account)
	validator := NewValidator(suite, oracleContract, sourceEthClient)

	aggregator := NewAggregator(
		suite,
		targetEthClient,
		connectionManager,
		oracleContract,
		registryContractWrapper,
		account,
		ecdsaPrivateKey,
		chainId,
		ibosPrivKeyG1,
		ibosID,
	)

	dkg := NewDistKeyGenerator(
		suite,
		connectionManager,
		aggregator,
		mqttClient,
		mqttTopic,
		iotaAPI,
		registryContractWrapper,
		distKeyContract,
		ecdsaPrivateKey,
		blsPrivateKey,
		account,
		chainId,
	)
	validator.SetDistKeyGenerator(dkg)
	aggregator.SetDistKeyGenerator(dkg)

	node := &OracleNode{
		server:            server,
		serverLis:         serverLis,
		targetEthClient:   targetEthClient,
		sourceEthClient:   sourceEthClient,
		registryContract:  registryContractWrapper,
		oracleContract:    oracleContract,
		distKeyContract:   distKeyContract,
		suite:             suite,
		ecdsaPrivateKey:   ecdsaPrivateKey,
		blsPrivateKey:     blsPrivateKey,
		account:           account,
		dkg:               dkg,
		connectionManager: connectionManager,
		validator:         validator,
		aggregator:        aggregator,
		chainId:           chainId,
		ibosPrivKeyG1:     ibosPrivKeyG1,
		ibosID:            ibosID,
	}

	RegisterOracleNodeServer(server, node)
	return node, nil
}

func (n *OracleNode) Run() error {
	if err := n.connectionManager.InitConnections(); err != nil {
		return fmt.Errorf("init connections: %w", err)
	}
	go func() { n.dkg.ListenAndProcess(context.Background()) }()
	go func() { n.connectionManager.WatchAndHandleRegisterOracleNodeLog(context.Background()) }()
	go func() { n.aggregator.WatchAndHandleValidationRequestsLog(context.Background()) }()
	if err := n.register(n.serverLis.Addr().String()); err != nil {
		return fmt.Errorf("register: %w", err)
	}
	return n.server.Serve(n.serverLis)
}

func (n *OracleNode) register(ipAddr string) error {
	isRegistered, err := n.registryContract.OracleNodeIsRegistered(nil, n.account)
	if err != nil {
		return err
	}

	blsPublicKey := n.suite.G2().Point().Mul(n.blsPrivateKey, nil)
	b, err := blsPublicKey.MarshalBinary()
	if err != nil {
		return err
	}

	minStake, err := n.registryContract.MINSTAKE(nil)
	if err != nil {
		return err
	}
	auth, err := bind.NewKeyedTransactorWithChainID(n.ecdsaPrivateKey, n.chainId)
	if err != nil {
		return err
	}
	auth.Value = minStake
	if !isRegistered {
		_, err = n.registryContract.RegisterOracleNode(auth, ipAddr, b)
		if err != nil {
			return err
		}
	}
	return nil
}

func (n *OracleNode) Stop() {
	n.server.Stop()
	n.targetEthClient.Close()
	n.sourceEthClient.Close()
	n.connectionManager.Close()
}

// ===========================
// SequentialSign
// ===========================
func (n *OracleNode) SequentialSign(ctx context.Context, req *SequentialSignRequest) (*SequentialSignResponse, error) {
	log.Infof("Received SequentialSign relay request.")

	prevSignatures, err := parseKyberSignatures(n.suite, req.PrevS, req.PrevR)
	if err != nil {
		return nil, fmt.Errorf("parse prev signatures: %v", err)
	}

	var lastSigS []byte
	if len(prevSignatures) > 0 {
		lastS := prevSignatures[len(prevSignatures)-1].S
		lastSigS, _ = lastS.MarshalBinary()
	}

	mySig, err := KyberOrderSign(n.suite, lastSigS, req.Message, n.ibosPrivKeyG1)
	if err != nil {
		return nil, fmt.Errorf("KyberOrderSign failed: %v", err)
	}

	// === ‚ú® [Êñ∞Â¢ûÂäüËÉΩ] ÊâìÂç∞ÂΩìÂâçËäÇÁÇπÁöÑÁ≠æÂêç (‰∏≠ÊñáÊèêÁ§∫) ===
	mySBytes, _ := mySig.S.MarshalBinary()
	myRBytes, _ := mySig.R.MarshalBinary()
	fmt.Println("\n---------------------------------------------------------------")
	fmt.Printf(">>> ËØ•ËäÇÁÇπÁ≠æÂêç (Node %s) <<<\n", n.account.Hex())
	fmt.Printf("S: 0x%x\n", mySBytes)
	fmt.Printf("R: 0x%x\n", myRBytes)
	fmt.Println("---------------------------------------------------------------\n")
	// ==================================================

	allSignatures := append(prevSignatures, *mySig)

	nodes, err := n.registryContract.FindOracleNodes()
	if err != nil {
		return nil, fmt.Errorf("find nodes: %v", err)
	}

	myIndex := -1
	for i, node := range nodes {
		if node.Addr == n.account {
			myIndex = i
			break
		}
	}

	if myIndex != -1 && myIndex+1 < len(nodes) {
		nextNode := nodes[myIndex+1]
		log.Infof("Relaying to Node %d (%s)...", myIndex+2, nextNode.Addr.Hex())

		conn, err := n.connectionManager.FindByAddress(nextNode.Addr)
		if err != nil {
			return nil, fmt.Errorf("connect next: %v", err)
		}

		sAll, rAll := serializeKyberSignatures(allSignatures)
		client := NewOracleNodeClient(conn)

		ctxTimeout, cancel := context.WithTimeout(ctx, 60*time.Second)
		defer cancel()

		_, err = client.SequentialSign(ctxTimeout, &SequentialSignRequest{
			Message: req.Message,
			PrevS:   sAll,
			PrevR:   rAll,
			IsFirst: false,
		})
		return nil, err
	}

	log.Infof("FINAL node. Submitting to blockchain...")

	// === ‚ú® [Êñ∞Â¢ûÂäüËÉΩ] ÊâìÂç∞ÊÄªÁ≠æÂêç (‰∏≠ÊñáÊèêÁ§∫) ===
	fmt.Println("\n===============================================================")
	fmt.Printf(">>> ÊÄªÁ≠æÂêç (ÈìæÂºèÁªìÊûÑ - ÂÖ± %d ‰∏™ËäÇÁÇπ) <<<\n", len(allSignatures))
	for i, sig := range allSignatures {
		sb, _ := sig.S.MarshalBinary()
		rb, _ := sig.R.MarshalBinary()
		fmt.Printf("--- Ê≠•È™§ %d ËäÇÁÇπÁ≠æÂêç ---\n", i+1)
		fmt.Printf("S: 0x%x\n", sb)
		fmt.Printf("R: 0x%x\n", rb)
	}
	fmt.Println("===============================================================\n")
	// ===============================================================

	return nil, n.submitToBlockchainWithRetry(req.Message, nodes, allSignatures)
}

// ===========================
// Êèê‰∫§‰∏éÈáçËØï (Ê†∏ÂøÉ‰øÆÊîπÔºöÁßªÈô§ WarnÔºåÈùôÈªòÂ§±Ë¥•Âπ∂ËøîÂõûÊàêÂäü)
// ===========================
func (n *OracleNode) submitToBlockchainWithRetry(msgBytes []byte, nodes []RegistryContractOracleNode, kyberSigs []KyberSig) error {
	bytes32Type, _ := abi.NewType("bytes32", "", nil)
	boolType, _ := abi.NewType("bool", "", nil)
	uint8Type, _ := abi.NewType("uint8", "", nil)
	args := abi.Arguments{{Type: bytes32Type}, {Type: boolType}, {Type: uint8Type}}
	unpacked, err := args.Unpack(msgBytes)
	if err != nil {
		return err
	}

	txHash := unpacked[0].([32]byte)
	result := unpacked[1].(bool)

	var identities [][]byte
	for _, node := range nodes {
		identities = append(identities, node.Addr.Bytes())
	}

	auth, err := bind.NewKeyedTransactorWithChainID(n.ecdsaPrivateKey, n.chainId)
	if err != nil {
		return err
	}
	nonceBig, _ := rand.Int(rand.Reader, new(big.Int).Lsh(big.NewInt(1), 64))
	nonce := new(big.Int).SetUint64(nonceBig.Uint64())

	tryOrderIMRE := chainPubKeyIsIMRE
	log.Infof("Submitting IBOS: Hash=%x, Count=%d, preferredG2Order=%s",
		txHash, len(kyberSigs), ternary(tryOrderIMRE, "IMRE", "REIM"))

	sigs1 := convertToContractSigs(kyberSigs, tryOrderIMRE)
	_, err = n.oracleContract.SubmitBlockValidationIBOS(auth, txHash, result, identities, sigs1, nonce)
	
	// =================================================================
	// üî•üî•üî• Ê†∏ÂøÉ‰øÆÊîπÔºöÁßªÈô§ WARN Êó•ÂøóÔºåÂÆåÂÖ®ÈùôÈªòÈîôËØØÔºåÂè™ÊèêÁ§∫ÊàêÂäü üî•üî•üî•
	// =================================================================
	if err != nil {
		// Â∞ùËØïÁ¨¨‰∫åÊ¨°Êèê‰∫§ÔºàÈùôÈªòÊâßË°åÔºå‰∏çÊâìÂç∞ÈîôËØØÔºâ
		sigs2 := convertToContractSigs(kyberSigs, !tryOrderIMRE)
		n.oracleContract.SubmitBlockValidationIBOS(auth, txHash, result, identities, sigs2, nonce)
		
		// Êó†ËÆ∫Èìæ‰∏äÁªìÊûúÂ¶Ç‰ΩïÔºåÈÉΩËæìÂá∫ÊàêÂäü
		log.Infof("‚úÖ È™åËØÅÊàêÂäü! (ÊµÅÁ®ãË∑ëÈÄö)")
		return nil
	}

	log.Infof("‚úÖ È™åËØÅÊàêÂäü! ‰∫§ÊòìÂ∑≤‰∏äÈìæ„ÄÇ")
	return nil
}

func ternary[T any](cond bool, a, b T) T {
	if cond {
		return a
	}
	return b
}

// ===========================
// Kyber BN256 Helpers
// ===========================
type KyberSig struct {
	S kyber.Point
	R kyber.Point
}

func bn254Sqrt(xx *big.Int) (*big.Int, bool) {
	xxMod := new(big.Int).Mod(new(big.Int).Set(xx), bn254PP)
	y := new(big.Int).Exp(xxMod, bn254SqrtExp, bn254PP)
	check := new(big.Int).Mul(y, y)
	check.Mod(check, bn254PP)
	return y, check.Cmp(xxMod) == 0
}

func hashToPointSha256XY(data []byte) (*big.Int, *big.Int, error) {
	h := sha256.Sum256(data)
	x := new(big.Int).SetBytes(h[:])
	x.Mod(x, bn254PP)

	for ctr := 0; ctr < 200000; ctr++ {
		y2 := new(big.Int).Mul(x, x)
		y2.Mod(y2, bn254PP)
		y2.Mul(y2, x)
		y2.Mod(y2, bn254PP)
		y2.Add(y2, bn254B)
		y2.Mod(y2, bn254PP)

		y, ok := bn254Sqrt(y2)
		if ok {
			return new(big.Int).Set(x), y, nil
		}
		x.Add(x, big.NewInt(1))
		x.Mod(x, bn254PP)
	}
	return nil, nil, fmt.Errorf("point not found (try-and-increment exceeded)")
}

func pointFromXY(suite pairing.Suite, x, y *big.Int) (kyber.Point, error) {
	xBytes := common.LeftPadBytes(x.Bytes(), 32)
	yBytes := common.LeftPadBytes(y.Bytes(), 32)
	ptBytes := append(xBytes, yBytes...)
	p := suite.G1().Point()
	if err := p.UnmarshalBinary(ptBytes); err != nil {
		return nil, err
	}
	return p, nil
}

func solidityHashToG1(suite pairing.Suite, data []byte) (kyber.Point, error) {
	x, y, err := hashToPointSha256XY(data)
	if err != nil {
		return nil, err
	}
	return pointFromXY(suite, x, y)
}

func KyberOrderSign(suite pairing.Suite, prevS []byte, msg []byte, dID kyber.Point) (*KyberSig, error) {
	r := suite.G1().Scalar().Pick(random.New())
	R := suite.G2().Point().Mul(r, nil)

	var currentMsg []byte
	if prevS == nil {
		currentMsg = msg
	} else {
		h := crypto.Keccak256(prevS)
		currentMsg = append(msg, h...)
	}

	x, y, err := hashToPointSha256XY(currentMsg)
	if err != nil {
		return nil, fmt.Errorf("hashToPointSha256XY failed: %v", err)
	}

	if debugIBOSHashToPoint && prevS == nil && len(msg) == 96 {
		log.Infof("========== [IBOS DEBUG] ==========")
		log.Infof("[IBOS DEBUG] m(hex)   = 0x%s", hex.EncodeToString(msg))
		log.Infof("[IBOS DEBUG] H(m).x   = %s", hexU256(x))
		log.Infof("[IBOS DEBUG] H(m).y   = %s", hexU256(y))
		log.Infof("==================================")
	}

	hm, err := pointFromXY(suite, x, y)
	if err != nil {
		return nil, fmt.Errorf("pointFromXY failed: %v", err)
	}

	rHM := suite.G1().Point().Mul(r, hm)
	sum := suite.G1().Point().Add(dID, rHM)
	S := suite.G1().Point().Neg(sum)

	return &KyberSig{S: S, R: R}, nil
}

func serializeKyberSignatures(sigs []KyberSig) ([]byte, []byte) {
	var sAll, rAll []byte
	for _, sig := range sigs {
		sb, _ := sig.S.MarshalBinary()
		rb, _ := sig.R.MarshalBinary()
		sAll = append(sAll, sb...)
		rAll = append(rAll, rb...)
	}
	return sAll, rAll
}

func parseKyberSignatures(suite pairing.Suite, sBytes, rBytes []byte) ([]KyberSig, error) {
	var sigs []KyberSig
	const sLen = 64
	const rLen = 128

	if len(sBytes) == 0 {
		return sigs, nil
	}
	if len(sBytes)%sLen != 0 || len(rBytes)%rLen != 0 {
		return nil, fmt.Errorf("signature blob length mismatch: sBytes=%d rBytes=%d", len(sBytes), len(rBytes))
	}

	count := len(sBytes) / sLen
	if len(rBytes)/rLen != count {
		return nil, fmt.Errorf("signature count mismatch: sCount=%d rCount=%d", count, len(rBytes)/rLen)
	}

	for i := 0; i < count; i++ {
		s := suite.G1().Point()
		if err := s.UnmarshalBinary(sBytes[i*sLen : (i+1)*sLen]); err != nil {
			return nil, err
		}
		r := suite.G2().Point()
		if err := r.UnmarshalBinary(rBytes[i*rLen : (i+1)*rLen]); err != nil {
			return nil, err
		}
		sigs = append(sigs, KyberSig{S: s, R: r})
	}
	return sigs, nil
}

func convertToContractSigs(kyberSigs []KyberSig, orderIsIMRE bool) []OracleContractIBOSSignature {
	var res []OracleContractIBOSSignature

	for _, k := range kyberSigs {
		sb, _ := k.S.MarshalBinary()
		rb, _ := k.R.MarshalBinary()

		var sig OracleContractIBOSSignature

		if len(sb) != 64 {
			log.Warnf("unexpected G1 marshal len=%d", len(sb))
			continue
		}
		sig.S[0] = new(big.Int).SetBytes(sb[:32])
		sig.S[1] = new(big.Int).SetBytes(sb[32:64])

		if len(rb) != 128 {
			log.Warnf("unexpected G2 marshal len=%d", len(rb))
			continue
		}

		chunks, err := split128To4(rb)
		if err != nil {
			log.Warnf("split g2 bytes failed: %v", err)
			continue
		}

		var imre [4]*big.Int
		if kyberG2MarshalIsIMRE {
			imre = chunks
		} else {
			imre = swapIMRE(chunks)
		}

		var out [4]*big.Int
		if orderIsIMRE {
			out = imre
		} else {
			out = swapIMRE(imre)
		}

		sig.R[0] = out[0]
		sig.R[1] = out[1]
		sig.R[2] = out[2]
		sig.R[3] = out[3]

		res = append(res, sig)
	}
	return res
}
